--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 	<title>Туристическая раскладка для чайников 3.0</title>
 	<meta charset='utf8'>
 
+	<!-- Bootstrap connection-->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 	
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -15,13 +21,13 @@
 
 
 
-	<!-- JQuery & JQuery-UI scripts -->
-	<script src="lib/jquery-2.1.4.min.js"></script>
+	<!-- JQuery & JQuery-UI scripts 
+	<script src="lib/jquery-2.1.4.min.js"></script> -->
 	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script src="widgets/jquery.inputmask.bundle.js" ></script>
 
-	<!-- Styles -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<!-- Styles 
+	<link rel="stylesheet" href="css/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
 
@@ -31,34 +37,146 @@
 <body ng-app='Raskladka'>
 
 
-<div ng-controller='MainController' class="clearfix">
-<div>
-	<form>			
-		<input type="checkbox" ng-model='admin' ng-click='adminStatus()'> Войти как админ(Лидер!)			
-	</form>
+<div ng-controller='MainController'>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" ui-sref="home"><span class="glyphicon glyphicon-tent"></span> Раскладка 4.0 Beta</a>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <div class='collapse navbar-collapse' id='myNavbar'>
+    <ul class="nav navbar-nav">
+      <li><a ui-sref="loadReady">Загрузить раскладку</a></li>
+      <li><a ng-click='reset()' ui-sref="createNew">Сделать новую</a></li>
+      <li ng-disabled='!admin' class='dropdown'>
+      	<a class="btn dropdown-toggle" data-toggle='dropdown' ng-disabled='!admin'>Админ
+      	<span class="caret"></span></a>
+      	<ul class="dropdown-menu">
+          <li><a class="btn" ng-disabled='!admin' ng-click='saveDataToServer()'>Сохранить</a></li>
+          <li><a class="btn" ng-disabled='!admin' ng-click='eraseTrip()'>Стереть</a></li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a ng-show='!admin' href="#"><span class="glyphicon glyphicon-user"></span> Зарегиться</a></li>
+      <li><a ng-show='admin' class='disabled'><span class="glyphicon glyphicon-ok"></span> Привет, {{login}}</a></li>
+      <li><a ng-show='!admin'class='btn' data-toggle="modal" data-target="#loginModal"><span class="glyphicon glyphicon-log-in"></span> Войти</a></li>
+      <li><a ng-show='admin' class='btn' data-toggle="modal" data-target="#exitModal"><span class="glyphicon glyphicon-log-out"></span> Выйти</a></li> 
+    </ul>
+    </div>
+  </div>
+</nav>
+
+<div id="loginModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Введите логин и пароль</h4>
+      </div>
+      
+      <div class="modal-body">
+      	<form name='enter'>
+	      <div class="form-group">	      
+	  	  	<label for="login">Логин:</label>
+	  		<input type="text" class="form-control" id="login" name='login' ng-maxlength="50" ng-model='login'>
+	  		<span ng-if="enter.login.$error.maxlength">
+            Это слишком уж длинное название, таких не бывает!
+        	</span>        
+		  </div>
+
+		  <div class="form-group">
+		  	<label for="pwd">Пароль:</label>
+		  	<input type="password" class="form-control" id="pwd" name='password' ng-maxlength="50" ng-model='password'>
+		  	<span ng-if="enter.password.$error.maxlength">
+            Это слишком уж длинный пароль, таких не бывает!
+        	</span> 
+		  </div> 
+		</form>
+        
+      </div>
+      <div class="modal-footer">
+      	<button type="button" class="btn btn-default" ng-disabled="enter.$invalid" ng-click="checkUser()" data-dismiss="modal">
+      	Войти</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Отмена</button>
+      </div>
+    </div>
+
+  </div>
 </div>
-<button type="button" class="btn btn-primary" ng-disabled='!admin' ng-click='saveDataToServer()'>Сохранить все данные</button>
+
+<div id="exitModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Точно выйти?</h4>
+      </div>
+      <div class="modal-body">
+        <button type="button" class="btn btn-default" ng-click='adminExit()' data-dismiss="modal">Да!</button>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+<!-- <form name='loadForm' novalidate>
+
+		<label for="tripName">Название похода:</label>
+		<input type="text" class="form-control" name="tripName" placeholder="Введите название похода для загрузки из БД"
+		ng-model = 'loadCtrl.tripName' ng-maxlength="50"/>			
+		<span ng-if="loadForm.tripName.$error.maxlength">
+            Это слишком уж длинное название, таких не бывает!
+        </span>        
+        <br>
+
+		<label for="tripPassword">Пароль доступа:</label>
+		<input type="password" class="form-control" name="tripPassword" placeholder="Введите пароль доступа"
+		ng-model = 'loadCtrl.tripPassword' ng-maxlength="50"/>			
+		<span ng-if="loadForm.tripPassword.$error.maxlength">
+            Это слишком уж длинный пароль, таких не бывает!
+        </span>        
+        <br>
+
+
+        <button 
+          ng-disabled="loadForm.$invalid"
+          ng-click="loadCtrl.checkDB()"
+          ui-sref= "setProducts({fromDB: 1})">Загрузить!
+        </button>
+</form>
+ -->
+	
+
+<!-- <button type="button" class="btn btn-primary" ng-disabled='!admin' ng-click='saveDataToServer()'>Сохранить все данные</button>
 <button type="button" class="btn btn-primary" ng-disabled='!admin' ng-click='eraseTrip()'>Удалить этот поход из БД</button>
 	<h2> Раскладка для чайников 3.0 - Beta</h2>
+	<a ui-sref="home">home!!!</a></li>
 	<ul>
-		<li><a ui-sref="loadReady">Загрузить подготовленную раскладку</a></li>
-		<li><a ng-click='reset()' ui-sref="createNew">Сделать новую раскладку</a></li>
-	</ul>
-
-	<ui-view></ui-view>
+		<li><a >Загрузить подготовленную раскладку</a></li>
+		<li><</li>
+	</ul> -->
+	<div class='container'><ui-view></ui-view></div>
+	
 </div>
-<div>
-	<br>
-	<br>
-	<br>
-	<br>
-	Copyright 2017 by.....
-	<br>
-	<br>
-	<br>
-	<br>
+<footer class="container-fluid text-center">
 
-</div>
+
+	Copyright 2017 by Kokon&Co. All rights reserved!!!
+	
+
+</footer>
 
 
 
@@ -72,7 +190,7 @@
 <!-- Libs -->
  	
  	<script src="lib/ajax-utils.js"></script>  
-    <script src="lib/bootstrap.min.js"></script>
+   <!--<script src="lib/bootstrap.min.js"></script> -->
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-ui-router.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-messages.js"></script>
